log
Fri Apr  8 15:13:22 UTC 2022: 
 tests:  0|6
total_score: 0/70
d73e751
Fri Apr  8 15:28:52 UTC 2022: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:55:3: error: ‘Ncap’ undeclared (first use in this function); did you mean ‘bcmp’?
   Ncap=capacity;
   ^~~~
   bcmp
hashmap.c:55:3: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:58:8: error: ‘HashMap {aka struct HashMap}’ has no member named ‘capcity’; did you mean ‘capacity’?
   aux->capcity=Ncap;
        ^~~~~~~
        capacity
Compilation failed
186b325
Fri Apr  8 15:29:01 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:55:3: error: ‘Ncap’ undeclared (first use in this function); did you mean ‘bcmp’?
   Ncap=capacity;
   ^~~~
   bcmp
hashmap.c:55:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
156f0ee
Fri Apr  8 15:29:11 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
234f6c9
Fri Apr  8 15:37:42 UTC 2022: 
 hashmap.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:12: error: ‘HashMap {aka struct HashMap}’ has no member named ‘bucket’; did you mean ‘buckets’?
   if (map->bucket==NULL){
            ^~~~~~
            buckets
hashmap.c:45:10: error: ‘HashMap {aka struct HashMap}’ has no member named ‘bucket’; did you mean ‘buckets’?
     map->bucket[pos]=value;
          ^~~~~~
          buckets
hashmap.c:51:16: error: ‘HashMap {aka struct HashMap}’ has no member named ‘bucket’; did you mean ‘buckets’?
     while(map->bucket!=NULL){
                ^~~~~~
                buckets
hashmap.c:53:12: error: ‘HashMap {aka struct HashMap}’ has no member named ‘bucket’; did you mean ‘buckets’?
       map->bucket[pos]=value;
            ^~~~~~
            buckets
Compilation failed
3ec2afa
Fri Apr  8 15:37:59 UTC 2022: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
2c6d225
